# Chatbot2-With-LiteLLM

./: README.md
chatbot-litellm/chatbotLM/: pyproject.toml
chatbot-litellm/chatbotLM/src/chatbotlm/: __init__.py  chatbot_stream_LM.py  my_secrets.py
